# Ai-Phishing-Detector

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: ci.yml
